js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/top-level-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
typeof
import
.
source
.
UNKNOWN
;
